--- a/pom.xml
+++ b/pom.xml
@@ -97,14 +97,19 @@
         </plugin>
         <plugin>
           <groupId>org.mybatis.generator</groupId>
-          <artifactId>mybatis-generator-core</artifactId>
+          <artifactId>mybatis-generator-maven-plugin</artifactId>
           <version>1.3.5</version>
           <dependencies>
-          <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.41</version>
-          </dependency>
+            <dependency>
+              <groupId>org.mybatis.generator</groupId>
+              <artifactId>mybatis-generator-core</artifactId>
+              <version>1.3.5</version>
+            </dependency>
+            <dependency>
+              <groupId>mysql</groupId>
+              <artifactId>mysql-connector-java</artifactId>
+              <version>5.1.46</version>
+            </dependency>
           </dependencies>
           <executions>
             <execution>
@@ -119,7 +124,7 @@
             <verbose>true</verbose>
             <overwrite>true</overwrite>
             <configurationFile>
-              src/main/sources/mybatis-generator.xml
+              src/main/resources/mybatis-generator.xml
             </configurationFile>
           </configuration>
 
