--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
       <version>5.2.2.RELEASE</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.9</version>
+    </dependency>
   </dependencies>
 
   <build>
