add item and item stock db and DO

--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,6 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <version>5.2.2.RELEASE</version>
@@ -148,7 +144,7 @@
           </executions>
           <configuration>
             <verbose>true</verbose>
-            <overwrite>true</overwrite>
+            <overwrite>false</overwrite>
             <configurationFile>
               src/main/resources/mybatis-generator.xml
             </configurationFile>
